# LCA-Special-Course

./: .gitattributes  .gitignore  .gitlab-ci.yml  LICENSE  NOTICE  README.md  environment.yml  environment_HPC.yml  export_for_lca.py  mode_cost_breakdown.csv  mode_interventions_summary.csv  pyproject.toml  slurm-4025089.out  slurm-4025673.out  slurm-4025674.out  slurm-4026569.out  slurm-4026583.out  slurm-4026612.out  slurm-4026867.out  slurm-4027469.out  slurm-4027473.out  slurm-4028526.out  slurm-4037975.out  slurm-4038216.out  slurm-4038255.out  slurm-4038348.out  slurm-4041180.out  slurm-4045032.out  slurm-4045066.out  slurm-4045073.out  slurm-4053469.out  slurm-4053538.out  slurm-4054791.out  slurm-4058222.out  slurm-4058285.out  slurm-4058288.out  slurm-4058393.out  slurm-4058405.out  slurm-4058452.out  slurm-4058662.out  (+9 more)
LCA_module/: .gitignore  README.md  inventory_codes.yaml  inventory_masses.py  lca_analysis.ipynb  lca_engine.py  main.py  results.py  technical_output.py
core/: CAPEX.py  CashFlowEngine.py  Curtailment.py  Data_classes.py  FINEX.py  File_Handling.py  LCA.py  LTE.py  MarketEnvironment.py  MetEnvironment.py  OPEX.py  OPEX_dummy.py  PyWakeModel.py  ResultsCollector.py  Revenue_Model.py  Simulation.py  SimulationConfig.py  TurbineSurrogate.py  Valuation.py  ValueWindEnv.py  WF_Controller.py  WindFarm.py  market_model_util.py  utils.py
docs/: .gitignore  Makefile  changelog.md  conf.py  contributing.md  index.md  make.bat  requirements.txt
examples/: WINPACT_API.ipynb  WINPACT_API_WISER.ipynb
lca_interface/: technical_output.py
(+278 files in other folders)
